# Adaptive-Retrieval-Augmented-Transformer-Platform-with-Ealuation

./: README.md  create_structure.py
ai_platform/: pyproject.toml
ai_platform/apps/api/: main.py
ai_platform/tests/: test_config.py  test_logger.py
