[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_platform"
version = "0.1.0"
description = "Research-grade AI production intelligence platform"
authors = [
    { name = "Rohit Bharti" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "python-dotenv",
    "structlog",
    "sqlalchemy",
    "asyncpg",
    "qdrant-client",
    "httpx"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy"
]

[tool.setuptools]
packages = ["packages"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"